# Arfamed

pythonProject1/Arfamed/: pyproject.toml
pythonProject1/Arfamed/data/: db.sqlite3
pythonProject1/Arfamed/src/core/: settings.py  urls.py
pythonProject1/Arfamed/src/modules/site_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
pythonProject1/Arfamed/src/modules/site_app/migrations/: 0001_initial.py  0002_globalheader_link_alter_iconbox_title_and_more.py  0003_rename_tittle_globalheader_title.py  0004_appointments_rename_tittle_aboutusaccordion_title.py  0005_message.py  0006_alter_message_message.py  0007_rename_email_message_email_and_more.py  0008_rename_your_name_message_name_and_more.py  0009_rename_name_message_title.py  0010_rename_title_message_name.py  0011_remove_message_name_remove_message_phone_and_more.py  0012_message_name_alter_message_message.py  0013_message_phone_message_venue.py  0014_remove_message_name.py  0015_message_name.py
